--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" type="image/png" href="/src/icons/favicon.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="src/icons/favicon.png">
     
 </head>
 <body>
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/src/images/LOGO_FINAL.png" alt="INCOS El Alto">
+                <img src="src/images/LOGO_FINAL.png" alt="INCOS El Alto">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -68,28 +68,28 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/src/images/incos.webp" class="d-block w-100" alt="Instalaciones INCOS">
+                    <img src="src/images/incos.webp" class="d-block w-100" alt="Instalaciones INCOS">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Nuestro Instituto</h5>
                         <p>Contamos con infraestructura moderna y aulas equipadas para tu formación profesional</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/src/images/instalaciones.webp" class="d-block w-100" alt="Laboratorios">
+                    <img src="src/images/instalaciones.webp" class="d-block w-100" alt="Laboratorios">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Instalaciones Modernas</h5>
                         <p>Contamos con aulas equipadas para tu formación profesional</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/src/images/laboratorios.jpg" class="d-block w-100" alt="Laboratorios">
+                    <img src="src/images/laboratorios.jpg" class="d-block w-100" alt="Laboratorios">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Laboratorios Especializados</h5>
                         <p>Espacios diseñados para la práctica contable y financiera</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/src/images/com_estudiantil.jpg" class="d-block w-100" alt="Estudiantes">
+                    <img src="src/images/com_estudiantil.jpg" class="d-block w-100" alt="Estudiantes">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Comunidad Estudiantil</h5>
                         <p>Forma parte de una comunidad académica comprometida</p>
@@ -231,7 +231,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card text-center">
-                        <img src="/src/images/ferias.jpg" class="card-img-top" alt="actividad 1">
+                        <img src="src/images/ferias.jpg" class="card-img-top" alt="actividad 1">
                         <div class="card-body">
                             <h5 class="card-title">Actividades Academicas</h5>
                             <p class="card-text">Ferias de emprendimiento y proyectos empresariales</p>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card text-center">
-                        <img src="/src/images/deporte1.jpg" class="card-img-top" alt="Actividad 2">
+                        <img src="src/images/deporte1.jpg" class="card-img-top" alt="Actividad 2">
                         <div class="card-body">
                             <h5 class="card-title">Actividades Deportivas</h5>
                             <p class="card-text">Torneos internos de fútbol, básquet y vally</p>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card text-center">
-                        <img src="/src/images/capacitacion1.jpg" class="card-img-top" alt="Actividad 3">
+                        <img src="src/images/capacitacion1.jpg" class="card-img-top" alt="Actividad 3">
                         <div class="card-body">
                             <h5 class="card-title">Actividades de capacitaciones</h5>
                             <p class="card-text">Talleres de emprendimiento y plan de negocios</p>
@@ -373,6 +373,6 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
- <script src="/js/script.js"></script>
+ <script src="js/script.js"></script>
 </body>
 </html>
